fix(styling): fixing contrast styling for secondary and negative button
affects: @entur/button

--- a/packages/button/src/Button.scss
+++ b/packages/button/src/Button.scss
@@ -121,6 +121,7 @@ a.eds-button {
     .eds-contrast & {
       background-color: $colors-brand-blue;
       color: $colors-brand-white;
+      border-color: $colors-brand-lavender;
 
       > .eds-button__spinner {
         border: $border-widths-large solid rgba($colors-brand-white, 0.5);
@@ -177,6 +178,7 @@ a.eds-button {
     }
     .eds-contrast & {
       color: $colors-brand-white;
+      border-color: $colors-validation-lava-contrast;
       > .eds-button__spinner {
         border: $border-widths-large solid rgba($colors-brand-white, 0.5);
         border-right-color: $colors-brand-white;
@@ -186,6 +188,7 @@ a.eds-button {
       }
       &:active {
         background-color: $colors-validation-lava-contrast;
+        color: $colors-brand-blue;
       }
     }
   }
